--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<div class="container">
+  <form class="form-signin">
+    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <label for="inputEmail" class="sr-only">E-mail</label>
+    <input
+      type="email"
+      class="sr-only"
+      id="inputEmail"
+      placeholder="Email address"
+      required
+      autofocus
+    />
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input
+      type="password"
+      id="inputPassword"
+      class="form-control"
+      placeholder="Password"
+      required
+    />
+    <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" value="remember-me" />
+        Remember me
+      </label>
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">
+      Sign in
+    </button>
+    <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
+  </form>
+</div>
