added form control class to email input

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <form class="form-signin">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail" class="sr-only">E-mail</label>
+    <label for="inputEmail" class="sr-only">Email</label>
     <input
       type="email"
-      class="sr-only"
+      class="form-control"
       id="inputEmail"
       placeholder="Email address"
       required
