--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,25 +1,27 @@
-<form [formGroup]="todoForm" (ngSubmit)="(todoSubmit)">
-  <div class="form-group">
-    <h1 class="text(-center text-primary">App</h1>
-    <div class="input-group-prepend">
-      <input
-        type="text"
-        class="form-control"
-        placeholder="add input"
-        name="todo"
-        formControlName="todo"
-      />
-      <span class="input-group-text" (click)="(addTodo)">
-        <i class="material-icons">add</i>
-      </span>
+<div class="container">
+  <form [formGroup]="todoForm" (ngSubmit)="addTodo()">
+    <div class="form-group">
+      <h1 class="text-center text-primary">App</h1>
+      <div class="input-group-prepend">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="add input"
+          name="todo"
+          formControlName="todo"
+        />
+        <span class="input-group-text" (click)="addTodo()">
+          <i class="material-icons">add</i>
+        </span>
+      </div>
     </div>
-  </div>
-  <div class="data">
-    <ul class="list-unstyled">
-      <li [@moveInLeft] *ngFor="let todo of todoArray">
-        {{ todo }}
-        <i class="material-icons" (click)="deleteItem(todo)">delete</i>
-      </li>
-    </ul>
-  </div>
-</form>
+    <div class="data">
+      <ul class="list-unstyled">
+        <li [@moveInLeft] *ngFor="let todo of todoArray">
+          {{ todo }}
+          <i class="material-icons" (click)="deleteItem(todo)">delete</i>
+        </li>
+      </ul>
+    </div>
+  </form>
+</div>
