fixed material icons & added logout functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<h1>Angular Todo Router App</h1>
+<!-- <h1>Angular Todo Router App</h1>
 <nav>
   <ul>
     <li><a routerLink="/login" routerLinkActive>Login page</a></li>
     <li><a routerLink="/home" routerLinkActive>Home page</a></li>
   </ul>
 </nav>
-
+ -->
 <router-outlet></router-outlet>
